[package]
name = "webserver"
version = "0.1.76"
edition = "2021"
authors = ["Coviță Sebastian-Marian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Axum
axum = "0.7.1"
#Tokio
tokio = { version = "1.34.0", features = ["full"] }
#Tower
tower-http = {version = "*", features = ["cors"]}
#http
http = { version = "*"}